src/antlr/SdtgParser.java
// Generated from Sdtg.g4 by ANTLR 4.6
package antlr;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({ "all", "warnings", "unchecked", "unused", "cast" })
public class SdtgParser extends Parser {
    static
    {
        RuntimeMetaData.checkVersion("4.6", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache = new PredictionContextCache();
    public static final int T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, Whitespace = 5, String = 6, DeclarationStart = 7,
            End = 8, ScriptStart = 9, Identifier = 10, ChoiceStart = 11, ChoiceEnd = 12, Operator = 13,
            RelationalOperator = 14, Integer = 15, Or = 16, And = 17, Not = 18, LP = 19, RP = 20;
    public static final int RULE_game = 0, RULE_declarationSection = 1, RULE_identifierList = 2, RULE_scriptSection = 3,
            RULE_textLineList = 4, RULE_textLine = 5, RULE_textBlock = 6, RULE_line = 7, RULE_choicePrompt = 8,
            RULE_choiceList = 9, RULE_choiceExpression = 10, RULE_karmaOperationList = 11, RULE_karmaOperation = 12,
            RULE_karmaExpression = 13, RULE_karmaTerm = 14, RULE_karmaFactor = 15, RULE_karmaPrimary = 16,
            RULE_karmaPredicate = 17;
    public static final String[] ruleNames = { "game", "declarationSection", "identifierList", "scriptSection",
            "textLineList", "textLine", "textBlock", "line", "choicePrompt", "choiceList", "choiceExpression",
            "karmaOperationList", "karmaOperation", "karmaExpression", "karmaTerm", "karmaFactor", "karmaPrimary",
            "karmaPredicate" };

    private static final String[] _LITERAL_NAMES = { null, "','", "':'", "'{'", "'}'", null, null, "'initialize'",
            "'end'", "'script'", null, "'['", "']'", null, null, null, "'|'", "'&'", "'!'", "'('", "')'" };
    private static final String[] _SYMBOLIC_NAMES = { null, null, null, null, null, "Whitespace", "String",
            "DeclarationStart", "End", "ScriptStart", "Identifier", "ChoiceStart", "ChoiceEnd", "Operator",
            "RelationalOperator", "Integer", "Or", "And", "Not", "LP", "RP" };
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;
    static
    {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++)
        {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null)
            {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null)
            {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames()
    {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary()
    {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName()
    {
        return "Sdtg.g4";
    }

    @Override
    public String[] getRuleNames()
    {
        return ruleNames;
    }

    @Override
    public String getSerializedATN()
    {
        return _serializedATN;
    }

    @Override
    public ATN getATN()
    {
        return _ATN;
    }

    public SdtgParser(TokenStream input)
    {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    public static class GameContext extends ParserRuleContext {
        public DeclarationSectionContext declarationSection()
        {
            return getRuleContext(DeclarationSectionContext.class, 0);
        }

        public ScriptSectionContext scriptSection()
        {
            return getRuleContext(ScriptSectionContext.class, 0);
        }

        public GameContext(ParserRuleContext parent, int invokingState)
        {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex()
        {
            return RULE_game;
        }

        @Override
        public void enterRule(ParseTreeListener listener)
        {
            if (listener instanceof SdtgListener) ((SdtgListener) listener).enterGame(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener)
        {
            if (listener instanceof SdtgListener) ((SdtgListener) listener).exitGame(this);
        }
    }

    public final GameContext game() throws RecognitionException
    {
        GameContext _localctx = new GameContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_game);
        try
        {
            enterOuterAlt(_localctx, 1);
            {
                setState(36);
                declarationSection();
                setState(37);
                scriptSection();
            }
        }
        catch (RecognitionException re)
        {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally
        {
            exitRule();
        }
        return _localctx;
    }

    public static class DeclarationSectionContext extends ParserRuleContext {
        public TerminalNode DeclarationStart()
        {
            return getToken(SdtgParser.DeclarationStart, 0);
        }

        public TerminalNode LP()
        {
            return getToken(SdtgParser.LP, 0);
        }

        public IdentifierListContext identifierList()
        {
            return getRuleContext(IdentifierListContext.class, 0);
        }

        public TerminalNode RP()
        {
            return getToken(SdtgParser.RP, 0);
        }

        public TerminalNode End()
        {
            return getToken(SdtgParser.End, 0);
        }

        public DeclarationSectionContext(ParserRuleContext parent, int invokingState)
        {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex()
        {
            return RULE_declarationSection;
        }

        @Override
        public void enterRule(ParseTreeListener listener)
        {
            if (listener instanceof SdtgListener) ((SdtgListener) listener).enterDeclarationSection(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener)
        {
            if (listener instanceof SdtgListener) ((SdtgListener) listener).exitDeclarationSection(this);
        }
    }

    public final DeclarationSectionContext declarationSection() throws RecognitionException
    {
        DeclarationSectionContext _localctx = new DeclarationSectionContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_declarationSection);
        try
        {
            enterOuterAlt(_localctx, 1);
            {
                setState(39);
                match(DeclarationStart);
                setState(40);
                match(LP);
                setState(41);
                identifierList();
                setState(42);
                match(RP);
                setState(43);
                match(End);
            }
        }
        catch (RecognitionException re)
        {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally
        {
            exitRule();
        }
        return _localctx;
    }

    public static class IdentifierListContext extends ParserRuleContext {
        public TerminalNode Identifier()
        {
            return getToken(SdtgParser.Identifier, 0);
        }

        public IdentifierListContext identifierList()
        {
            return getRuleContext(IdentifierListContext.class, 0);
        }

        public IdentifierListContext(ParserRuleContext parent, int invokingState)
        {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex()
        {
            return RULE_identifierList;
        }

        @Override
        public void enterRule(ParseTreeListener listener)
        {
            if (listener instanceof SdtgListener) ((SdtgListener) listener).enterIdentifierList(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener)
        {
            if (listener instanceof SdtgListener) ((SdtgListener) listener).exitIdentifierList(this);
        }
    }

    public final IdentifierListContext identifierList() throws RecognitionException
    {
        IdentifierListContext _localctx = new IdentifierListContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_identifierList);
        try
        {
            setState(49);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 0, _ctx)) {
            case 1:
                enterOuterAlt(_localctx, 1);
            {
                setState(45);
                match(Identifier);
                setState(46);
                match(T__0);
                setState(47);
                identifierList();
            }
                break;
            case 2:
                enterOuterAlt(_localctx, 2);
            {
                setState(48);
                match(Identifier);
            }
                break;
            }
        }
        catch (RecognitionException re)
        {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally
        {
            exitRule();
        }
        return _localctx;
    }

    public static class ScriptSectionContext extends ParserRuleContext {
        public TerminalNode ScriptStart()
        {
            return getToken(SdtgParser.ScriptStart, 0);
        }

        public TextLineListContext textLineList()
        {
            return getRuleContext(TextLineListContext.class, 0);
        }

        public TerminalNode End()
        {
            return getToken(SdtgParser.End, 0);
        }

        public ScriptSectionContext(ParserRuleContext parent, int invokingState)
        {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex()
        {
            return RULE_scriptSection;
        }

        @Override
        public void enterRule(ParseTreeListener listener)
        {
            if (listener instanceof SdtgListener) ((SdtgListener) listener).enterScriptSection(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener)
        {
            if (listener instanceof SdtgListener) ((SdtgListener) listener).exitScriptSection(this);
        }
    }

    public final ScriptSectionContext scriptSection() throws RecognitionException
    {
        ScriptSectionContext _localctx = new ScriptSectionContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_scriptSection);
        try
        {
            enterOuterAlt(_localctx, 1);
            {
                setState(51);
                match(ScriptStart);
                setState(52);
                textLineList();
                setState(53);
                match(End);
            }
        }
        catch (RecognitionException re)
        {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally
        {
            exitRule();
        }
        return _localctx;
    }

    public static class TextLineListContext extends ParserRuleContext {
        public TextLineContext textLine()
        {
            return getRuleContext(TextLineContext.class, 0);
        }

        public TextLineListContext textLineList()
        {
            return getRuleContext(TextLineListContext.class, 0);
        }

        public TextBlockContext textBlock()
        {
            return getRuleContext(TextBlockContext.class, 0);
        }

        public TextLineListContext(ParserRuleContext parent, int invokingState)
        {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex()
        {
            return RULE_textLineList;
        }

        @Override
        public void enterRule(ParseTreeListener listener)
        {
            if (listener instanceof SdtgListener) ((SdtgListener) listener).enterTextLineList(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener)
        {
            if (listener instanceof SdtgListener) ((SdtgListener) listener).exitTextLineList(this);
        }
    }

    public final TextLineListContext textLineList() throws RecognitionException
    {
        TextLineListContext _localctx = new TextLineListContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_textLineList);
        try
        {
            setState(63);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 1, _ctx)) {
            case 1:
                enterOuterAlt(_localctx, 1);
            {
                setState(55);
                textLine();
                setState(56);
                textLineList();
            }
                break;
            case 2:
                enterOuterAlt(_localctx, 2);
            {
                setState(58);
                textLine();
            }
                break;
            case 3:
                enterOuterAlt(_localctx, 3);
            {
                setState(59);
                textBlock();
                setState(60);
                textLineList();
            }
                break;
            case 4:
                enterOuterAlt(_localctx, 4);
            {
                setState(62);
                textBlock();
            }
                break;
            }
        }
        catch (RecognitionException re)
        {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally
        {
            exitRule();
        }
        return _localctx;
    }

    public static class TextLineContext extends ParserRuleContext {
        public TextLineContext(ParserRuleContext parent, int invokingState)
        {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex()
        {
            return RULE_textLine;
        }

        public TextLineContext()
        {
        }

        public void copyFrom(TextLineContext ctx)
        {
            super.copyFrom(ctx);
        }
    }

    public static class RegularTextLineContext extends TextLineContext {
        public TerminalNode Identifier()
        {
            return getToken(SdtgParser.Identifier, 0);
        }

        public LineContext line()
        {
            return getRuleContext(LineContext.class, 0);
        }

        public RegularTextLineContext(TextLineContext ctx)
        {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener)
        {
            if (listener instanceof SdtgListener) ((SdtgListener) listener).enterRegularTextLine(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener)
        {
            if (listener instanceof SdtgListener) ((SdtgListener) listener).exitRegularTextLine(this);
        }
    }

    public static class ConditionalTextLineContext extends TextLineContext {
        public TerminalNode LP()
        {
            return getToken(SdtgParser.LP, 0);
        }

        public KarmaExpressionContext karmaExpression()
        {
            return getRuleContext(KarmaExpressionContext.class, 0);
        }

        public TerminalNode RP()
        {
            return getToken(SdtgParser.RP, 0);
        }

        public TerminalNode Identifier()
        {
            return getToken(SdtgParser.Identifier, 0);
        }

        public LineContext line()
        {
            return getRuleContext(LineContext.class, 0);
        }

        public ConditionalTextLineContext(TextLineContext ctx)
        {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener)
        {
            if (listener instanceof SdtgListener) ((SdtgListener) listener).enterConditionalTextLine(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener)
        {
            if (listener instanceof SdtgListener) ((SdtgListener) listener).exitConditionalTextLine(this);
        }
    }

    public final TextLineContext textLine() throws RecognitionException
    {
        TextLineContext _localctx = new TextLineContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_textLine);
        try
        {
            setState(75);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
            case LP:
                _localctx = new ConditionalTextLineContext(_localctx);
                enterOuterAlt(_localctx, 1);
            {
                setState(65);
                match(LP);
                setState(66);
                karmaExpression(0);
                setState(67);
                match(RP);
                setState(68);
                match(Identifier);
                setState(69);
                match(T__1);
                setState(70);
                line();
            }
                break;
            case Identifier:
                _localctx = new RegularTextLineContext(_localctx);
                enterOuterAlt(_localctx, 2);
            {
                setState(72);
                match(Identifier);
                setState(73);
                match(T__1);
                setState(74);
                line();
            }
                break;
            default:
                throw new NoViableAltException(this);
            }
        }
        catch (RecognitionException re)
        {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally
        {
            exitRule();
        }
        return _localctx;
    }

    public static class TextBlockContext extends ParserRuleContext {
        public TerminalNode LP()
        {
            return getToken(SdtgParser.LP, 0);
        }

        public KarmaExpressionContext karmaExpression()
        {
            return getRuleContext(KarmaExpressionContext.class, 0);
        }

        public TerminalNode RP()
        {
            return getToken(SdtgParser.RP, 0);
        }

        public TextLineListContext textLineList()
        {
            return getRuleContext(TextLineListContext.class, 0);
        }

        public TextBlockContext(ParserRuleContext parent, int invokingState)
        {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex()
        {
            return RULE_textBlock;
        }

        @Override
        public void enterRule(ParseTreeListener listener)
        {
            if (listener instanceof SdtgListener) ((SdtgListener) listener).enterTextBlock(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener)
        {
            if (listener instanceof SdtgListener) ((SdtgListener) listener).exitTextBlock(this);
        }
    }

    public final TextBlockContext textBlock() throws RecognitionException
    {
        TextBlockContext _localctx = new TextBlockContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_textBlock);
        try
        {
            enterOuterAlt(_localctx, 1);
            {
                setState(77);
                match(LP);
                setState(78);
                karmaExpression(0);
                setState(79);
                match(RP);
                setState(80);
                match(T__2);
                setState(81);
                textLineList();
                setState(82);
                match(T__3);
            }
        }
        catch (RecognitionException re)
        {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally
        {
            exitRule();
        }
        return _localctx;
    }

    public static class LineContext extends ParserRuleContext {
        public ChoicePromptContext choicePrompt()
        {
            return getRuleContext(ChoicePromptContext.class, 0);
        }

        public TerminalNode String()
        {
            return getToken(SdtgParser.String, 0);
        }

        public LineContext(ParserRuleContext parent, int invokingState)
        {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex()
        {
            return RULE_line;
        }

        @Override
        public void enterRule(ParseTreeListener listener)
        {
            if (listener instanceof SdtgListener) ((SdtgListener) listener).enterLine(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener)
        {
            if (listener instanceof SdtgListener) ((SdtgListener) listener).exitLine(this);
        }
    }

    public final LineContext line() throws RecognitionException
    {
        LineContext _localctx = new LineContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_line);
        try
        {
            setState(86);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
            case ChoiceStart:
                enterOuterAlt(_localctx, 1);
            {
                setState(84);
                choicePrompt();
            }
                break;
            case String:
                enterOuterAlt(_localctx, 2);
            {
                setState(85);
                match(String);
            }
                break;
            default:
                throw new NoViableAltException(this);
            }
        }
        catch (RecognitionException re)
        {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally
        {
            exitRule();
        }
        return _localctx;
    }

    public static class ChoicePromptContext extends ParserRuleContext {
        public TerminalNode ChoiceStart()
        {
            return getToken(SdtgParser.ChoiceStart, 0);
        }

        public TerminalNode String()
        {
            return getToken(SdtgParser.String, 0);
        }

        public ChoiceListContext choiceList()
        {
            return getRuleContext(ChoiceListContext.class, 0);
        }

        public TerminalNode ChoiceEnd()
        {
            return getToken(SdtgParser.ChoiceEnd, 0);
        }

        public ChoicePromptContext(ParserRuleContext parent, int invokingState)
        {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex()
        {
            return RULE_choicePrompt;
        }

        @Override
        public void enterRule(ParseTreeListener listener)
        {
            if (listener instanceof SdtgListener) ((SdtgListener) listener).enterChoicePrompt(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener)
        {
            if (listener instanceof SdtgListener) ((SdtgListener) listener).exitChoicePrompt(this);
        }
    }

    public final ChoicePromptContext choicePrompt() throws RecognitionException
    {
        ChoicePromptContext _localctx = new ChoicePromptContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_choicePrompt);
        try
        {
            enterOuterAlt(_localctx, 1);
            {
                setState(88);
                match(ChoiceStart);
                setState(89);
                match(String);
                setState(90);
                choiceList();
                setState(91);
                match(ChoiceEnd);
            }
        }
        catch (RecognitionException re)
        {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally
        {
            exitRule();
        }
        return _localctx;
    }

    public static class ChoiceListContext extends ParserRuleContext {
        public ChoiceExpressionContext choiceExpression()
        {
            return getRuleContext(ChoiceExpressionContext.class, 0);
        }

        public ChoiceListContext choiceList()
        {
            return getRuleContext(ChoiceListContext.class, 0);
        }

        public ChoiceListContext(ParserRuleContext parent, int invokingState)
        {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex()
        {
            return RULE_choiceList;
        }

        @Override
        public void enterRule(ParseTreeListener listener)
        {
            if (listener instanceof SdtgListener) ((SdtgListener) listener).enterChoiceList(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener)
        {
            if (listener instanceof SdtgListener) ((SdtgListener) listener).exitChoiceList(this);
        }
    }

    public final ChoiceListContext choiceList() throws RecognitionException
    {
        ChoiceListContext _localctx = new ChoiceListContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_choiceList);
        try
        {
            setState(98);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 4, _ctx)) {
            case 1:
                enterOuterAlt(_localctx, 1);
            {
                setState(93);
                choiceExpression();
                setState(94);
                match(T__0);
                setState(95);
                choiceList();
            }
                break;
            case 2:
                enterOuterAlt(_localctx, 2);
            {
                setState(97);
                choiceExpression();
            }
                break;
            }
        }
        catch (RecognitionException re)
        {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally
        {
            exitRule();
        }
        return _localctx;
    }

    public static class ChoiceExpressionContext extends ParserRuleContext {
        public TerminalNode String()
        {
            return getToken(SdtgParser.String, 0);
        }

        public KarmaOperationListContext karmaOperationList()
        {
            return getRuleContext(KarmaOperationListContext.class, 0);
        }

        public ChoiceExpressionContext(ParserRuleContext parent, int invokingState)
        {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex()
        {
            return RULE_choiceExpression;
        }

        @Override
        public void enterRule(ParseTreeListener listener)
        {
            if (listener instanceof SdtgListener) ((SdtgListener) listener).enterChoiceExpression(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener)
        {
            if (listener instanceof SdtgListener) ((SdtgListener) listener).exitChoiceExpression(this);
        }
    }

    public final ChoiceExpressionContext choiceExpression() throws RecognitionException
    {
        ChoiceExpressionContext _localctx = new ChoiceExpressionContext(_ctx, getState());
        enterRule(_localctx, 20, RULE_choiceExpression);
        try
        {
            setState(104);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 5, _ctx)) {
            case 1:
                enterOuterAlt(_localctx, 1);
            {
                setState(100);
                match(String);
                setState(101);
                match(T__1);
                setState(102);
                karmaOperationList();
            }
                break;
            case 2:
                enterOuterAlt(_localctx, 2);
            {
                setState(103);
                match(String);
            }
                break;
            }
        }
        catch (RecognitionException re)
        {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally
        {
            exitRule();
        }
        return _localctx;
    }

    public static class KarmaOperationListContext extends ParserRuleContext {
        public KarmaOperationContext karmaOperation()
        {
            return getRuleContext(KarmaOperationContext.class, 0);
        }

        public KarmaOperationListContext karmaOperationList()
        {
            return getRuleContext(KarmaOperationListContext.class, 0);
        }

        public KarmaOperationListContext(ParserRuleContext parent, int invokingState)
        {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex()
        {
            return RULE_karmaOperationList;
        }

        @Override
        public void enterRule(ParseTreeListener listener)
        {
            if (listener instanceof SdtgListener) ((SdtgListener) listener).enterKarmaOperationList(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener)
        {
            if (listener instanceof SdtgListener) ((SdtgListener) listener).exitKarmaOperationList(this);
        }
    }

    public final KarmaOperationListContext karmaOperationList() throws RecognitionException
    {
        KarmaOperationListContext _localctx = new KarmaOperationListContext(_ctx, getState());
        enterRule(_localctx, 22, RULE_karmaOperationList);
        try
        {
            setState(110);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 6, _ctx)) {
            case 1:
                enterOuterAlt(_localctx, 1);
            {
                setState(106);
                karmaOperation();
                setState(107);
                karmaOperationList();
            }
                break;
            case 2:
                enterOuterAlt(_localctx, 2);
            {
                setState(109);
                karmaOperation();
            }
                break;
            }
        }
        catch (RecognitionException re)
        {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally
        {
            exitRule();
        }
        return _localctx;
    }

    public static class KarmaOperationContext extends ParserRuleContext {
        public TerminalNode LP()
        {
            return getToken(SdtgParser.LP, 0);
        }

        public TerminalNode Identifier()
        {
            return getToken(SdtgParser.Identifier, 0);
        }

        public TerminalNode Operator()
        {
            return getToken(SdtgParser.Operator, 0);
        }

        public TerminalNode Integer()
        {
            return getToken(SdtgParser.Integer, 0);
        }

        public TerminalNode RP()
        {
            return getToken(SdtgParser.RP, 0);
        }

        public KarmaOperationContext(ParserRuleContext parent, int invokingState)
        {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex()
        {
            return RULE_karmaOperation;
        }

        @Override
        public void enterRule(ParseTreeListener listener)
        {
            if (listener instanceof SdtgListener) ((SdtgListener) listener).enterKarmaOperation(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener)
        {
            if (listener instanceof SdtgListener) ((SdtgListener) listener).exitKarmaOperation(this);
        }
    }

    public final KarmaOperationContext karmaOperation() throws RecognitionException
    {
        KarmaOperationContext _localctx = new KarmaOperationContext(_ctx, getState());
        enterRule(_localctx, 24, RULE_karmaOperation);
        try
        {
            enterOuterAlt(_localctx, 1);
            {
                setState(112);
                match(LP);
                setState(113);
                match(Identifier);
                setState(114);
                match(Operator);
                setState(115);
                match(Integer);
                setState(116);
                match(RP);
            }
        }
        catch (RecognitionException re)
        {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally
        {
            exitRule();
        }
        return _localctx;
    }

    public static class KarmaExpressionContext extends ParserRuleContext {
        public KarmaTermContext karmaTerm()
        {
            return getRuleContext(KarmaTermContext.class, 0);
        }

        public KarmaExpressionContext karmaExpression()
        {
            return getRuleContext(KarmaExpressionContext.class, 0);
        }

        public TerminalNode Or()
        {
            return getToken(SdtgParser.Or, 0);
        }

        public KarmaExpressionContext(ParserRuleContext parent, int invokingState)
        {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex()
        {
            return RULE_karmaExpression;
        }

        @Override
        public void enterRule(ParseTreeListener listener)
        {
            if (listener instanceof SdtgListener) ((SdtgListener) listener).enterKarmaExpression(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener)
        {
            if (listener instanceof SdtgListener) ((SdtgListener) listener).exitKarmaExpression(this);
        }
    }

    public final KarmaExpressionContext karmaExpression() throws RecognitionException
    {
        return karmaExpression(0);
    }

    private KarmaExpressionContext karmaExpression(int _p) throws RecognitionException
    {
        ParserRuleContext _parentctx = _ctx;
        int _parentState = getState();
        KarmaExpressionContext _localctx = new KarmaExpressionContext(_ctx, _parentState);
        KarmaExpressionContext _prevctx = _localctx;
        int _startState = 26;
        enterRecursionRule(_localctx, 26, RULE_karmaExpression, _p);
        try
        {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                {
                    setState(119);
                    karmaTerm(0);
                }
                _ctx.stop = _input.LT(-1);
                setState(126);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 7, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER)
                {
                    if (_alt == 1)
                    {
                        if (_parseListeners != null) triggerExitRuleEvent();
                        _prevctx = _localctx;
                        {
                            {
                                _localctx = new KarmaExpressionContext(_parentctx, _parentState);
                                pushNewRecursionContext(_localctx, _startState, RULE_karmaExpression);
                                setState(121);
                                if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
                                setState(122);
                                match(Or);
                                setState(123);
                                karmaTerm(0);
                            }
                        }
                    }
                    setState(128);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 7, _ctx);
                }
            }
        }
        catch (RecognitionException re)
        {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally
        {
            unrollRecursionContexts(_parentctx);
        }
        return _localctx;
    }

    public static class KarmaTermContext extends ParserRuleContext {
        public KarmaFactorContext karmaFactor()
        {
            return getRuleContext(KarmaFactorContext.class, 0);
        }

        public KarmaTermContext karmaTerm()
        {
            return getRuleContext(KarmaTermContext.class, 0);
        }

        public TerminalNode And()
        {
            return getToken(SdtgParser.And, 0);
        }

        public KarmaTermContext(ParserRuleContext parent, int invokingState)
        {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex()
        {
            return RULE_karmaTerm;
        }

        @Override
        public void enterRule(ParseTreeListener listener)
        {
            if (listener instanceof SdtgListener) ((SdtgListener) listener).enterKarmaTerm(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener)
        {
            if (listener instanceof SdtgListener) ((SdtgListener) listener).exitKarmaTerm(this);
        }
    }

    public final KarmaTermContext karmaTerm() throws RecognitionException
    {
        return karmaTerm(0);
    }
